# c-_python_image

./: README.md  c++_python_API-1.py
c++_python_yolo8-1/: CMakeLists.txt  forcpp_py_conda.py  main.cpp  readme
